--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@ body {
 
 body {
   background-color: #170128;
+  color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
